# rayon-bug-wasm

./: Cargo.toml  index.html  index.js  package.json  wasm-worker.js
src/: lib.rs
