[package]
name = "wasm-bindgen-rayon-demo"
version = "0.1.0"
authors = ["Ingvar Stepanyan <rreverser@google.com>"]
edition = "2018"
publish = false
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen-rayon = { path = "..", optional = true }
wasm-bindgen = "0.2.74"
rayon = { version = "1.5" }
num-complex = "0.4.0"
once_cell = "1.7.2"
getrandom = { version = "0.2.2", features = ["js"] }
rand = "0.8.3"
hsl = "0.1.1"
serde = { version = "1.0", features = ["derive", "rc"] }
wee_alloc = { version = "0.4.5"}

serde_json = "1.0"
[features]
parallel = ["wasm-bindgen-rayon"]
